# voxl-app-manager

./: .bashrc  .gitconfig  .gitignore  CMakeLists.txt  README.md  build.sh  install_build_deps.sh
app_example/: voxl_app_figure_eight.c  voxl_app_force_arm.c  voxl_app_land.c  voxl_app_take_off_1_5m.c  voxl_app_template.c
bash_completions/: voxl-app-manager
include/: app_runner.h  autopilot_monitor.h  config_file.h  macros.h  mavlink_io.h  misc.h  modal_journal_lite.h  pipe_channels.h  primitives.h  queue.h  voxl_app_figure_eight.h  voxl_app_manager.h  voxl_app_template.h
inspect_apps/: voxl-inspect-apps.c
pkg/control/: control
src/: app_runner.c  autopilot_monitor.c  config_file.c  main.c  mavlink_io.c  misc.c  modal_journal_lite.c  primitives.c  queue.c
